methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: type mismatch;
 found   : Int(0)
 required: Boolean
  if(vuBiscuit = 0){
                 ^